<resources>
    <string name="app_name">LibraryLoginSQL</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="text_checkin">Check In</string>
    <string name="text_checkout">Check Out</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">Don\'t have an account? Create One</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Passwords Do Not Match</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="text_member">Already a member? Login</string>
    <string name="signed_in">Signed In As</string>
    <string name="status_in">You\'re Currently Checked In</string>
    <string name="status_out">You\'re Currently Checked Out</string>
</resources>
